Этап 3-2. Добавляем рекомендательный сервис